--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #database :
 spring.datasource.url=jdbc:mysql://localhost:3306/hotelsDb?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=your user mySQL name
+spring.datasource.password=your password in mySQL
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
